Vectorize perlin noise
Enable with `--add-modules jdk.incubator.vector` jvm flag