@@ -16,9 +16,9 @@ loom {
             server()
             runDir getRootProject().getProjectDir().toPath().relativize(project.getBuildDir().toPath()).resolve("testServer").toString()
             source sourceSets.testmod
-            vmArgs "-Dcom.ishland.c2me.common.config.threadedWorldGen.allowThreadedFeatures=true",
-                    "-Dcom.ishland.c2me.common.config.threadedWorldGen.reduceLockRadius=true",
-                    "-Dcom.ishland.c2me.common.config.threadedWorldGen.enabled=true"
+            vmArgs "-Dcom.ishland.c2me.common.config.threadedWorldGen.reduceLockRadius=true",
+                    "-Dcom.ishland.c2me.common.config.threadedWorldGen.enabled=true",
+                    "--add-modules jdk.incubator.vector"
             if (System.getenv("GITHUB_WORKFLOW") != null) {
                 if (System.getenv("RUNNER_OS").equals("macOS")) {
                     vmArgs "-Xmx12G"
